# eduinfoh413a2

./: CMakeLists.txt  README.md
best_known/: best_known.txt
experiments/: tabu_150_100x  tabu_150_10x
instances/: test1  test2  test3
report/: notes.md
scripts/: experiments.lua  parallel_experiments.sh
scripts/instances/: N-be75eec_150  N-be75np_150  N-be75oi_150  N-be75tot_150  N-stabu1_150  N-stabu2_150  N-stabu3_150  N-t59b11xx_150  N-t59d11xx_150  N-t59f11xx_150  N-t59n11xx_150  N-t65b11xx_150  N-t65d11xx_150  N-t65f11xx_150  N-t65l11xx_150  N-t65n11xx_150  N-t69r11xx_150  N-t70b11xx_150  N-t70d11xn_150  N-t70d11xx_150  N-t70f11xx_150  N-t70l11xx_150  N-t70n11xx_150  N-t74d11xx_150  N-t75d11xx_150  N-t75e11xx_150  N-t75k11xx_150  N-t75n11xx_150  N-tiw56n54_150  N-tiw56n58_150  N-tiw56n62_150  N-tiw56n66_150  N-tiw56n67_150  N-tiw56n72_150  N-tiw56r54_150  N-tiw56r58_150  N-tiw56r66_150  N-tiw56r67_150  N-tiw56r72_150
src/: Debug.cpp  Debug.hpp  Instance.cpp  Instance.hpp  Log.cpp  Log.hpp  Permutation.cpp  Permutation.hpp
src/IterativeImprovement/: GlobalArgsII.cpp  GlobalArgsII.hpp  IterativeImprovement.cpp  IterativeImprovement.hpp  main_II.cpp
src/TabuSearch/: GlobalArgsTabu.cpp  GlobalArgsTabu.hpp  TabuSearch.cpp  TabuSearch.hpp  main_Tabu.cpp
src/VariableNeighbourhoodDescent/: GlobalArgsVND.cpp  GlobalArgsVND.hpp  VariableNeighbourhoodDescent.cpp  VariableNeighbourhoodDescent.hpp  main_VND.cpp
src/rules/: RulesFactory.cpp  RulesFactory.hpp
src/rules/Initialization/: CWInitialization.cpp  CWInitialization.hpp  Initialization.hpp  RandomInitialization.cpp  RandomInitialization.hpp
src/rules/Neighbourhood/: ExchangeNeighbourhood.cpp  ExchangeNeighbourhood.hpp  InsertNeighbourhood.cpp  InsertNeighbourhood.hpp  Neighbourhood.cpp  Neighbourhood.hpp  TransposeNeighbourhood.cpp  TransposeNeighbourhood.hpp
src/rules/Pivoting/: BestImprovement.cpp  BestImprovement.hpp  BestInferiorImprovement.cpp  BestInferiorImprovement.hpp  FirstImprovement.cpp  FirstImprovement.hpp  Improvement.hpp  TabuImprovement.cpp  TabuImprovement.hpp
src/tests/: best_improvement.cpp  cw_init.cpp  evaluate.cpp  first_improvement.cpp  load_instance.cpp  neighbourhoods.cpp  permutation.cpp  random_init.cpp  string_matrix_permutation.cpp
